<resources>
    <string name="app_name">Story App</string>
    <string name="story_app">Story App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="account_question">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="description">This is a description</string>
    <string name="add_story">Add Story Menu</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="logout">Logout</string>
    <string name="email_wrong">Wrong email format</string>
    <string name="password_wrong">Password must have at least 6 characters</string>
    <string name="name_wrong">Name can\'t be empty</string>
    <string name="register_success">Register success silahkan login</string>
    <string name="register_fail">Register fail</string>
    <string name="login_success">Login success</string>
    <string name="login_fail">Login fail</string>
    <string name="fail_load">Stories failed to load</string>
    <string name="success_load">Stories success to load</string>
    <string name="permission_deny">Permission denied</string>
    <string name="upload_success">Upload success</string>
    <string name="upload_fail">Upload fail</string>
    <string name="language">Change Language</string>
    <string name="take_picture">Fail to take picture</string>
    <string name="camera_fail">Fail to show camera</string>
    <string name="title_maps">Story Maps Activity</string>
    <string name="google_maps">Google Maps</string>
    <string name="retry">Try again</string>
    <string name="location">Your Location</string>
    <string name="story_upload">\"Story uploaded from \"</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="invalid_description">Description must be filled</string>
    <string name="no_attach_file">No file attached, please attach image first</string>
</resources>